tests/errors/invalid_uescape.pyx

u'\uXYZ'

_ERRORS = '''
2:2: Invalid unicode escape '\u'
'''
